include_directories(${Boost_INCLUDE_DIR})

add_library(synchronous_algorithms parameter_sweep synchronous_gradient_descent synchronous_newton_method gradient hessian line_search newton_step)
target_link_libraries(synchronous_algorithms undvc_common tao_util ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
